# lerolero

./: .gitignore  CLAUDE.md  LICENSE  README.md  REVIEW.md  build_dist.ps1  config.json  installer.iss  lerolero.spec  pyproject.toml  rthook_pythonnet.py  run.sh  run_silent.bat  run_whisper.bat  version_info.txt  whisper-typing.spec
.github/workflows/: build.yaml  release.yaml
scripts/: build_linux.sh  build_macos.sh
src/lerolero/: __main__.py  app_controller.py  audio_capture.py  constants.py  context_prompts.py  metrics.py  overlay_container.py  paths.py  personality.py  runtime_env.py  runtime_setup.py  transcriber.py  transcriber_parakeet.py  updater.py  webview_bridge.py  window_manager.py
src/lerolero/gui/: __init__.py  animations.py  app.py  recording_orb.py  screens.py  sidebar.py
src/lerolero/platform/: __init__.py  _base.py  _linux.py  _macos.py  _windows.py
src/whisper_typing/: __main__.py  app_controller.py  constants.py  context_prompts.py  metrics.py  overlay_container.py  paths.py  runtime_setup.py  text_cleaner.py  transcriber.py  webview_bridge.py  window_manager.py
src/whisper_typing/gui/: __init__.py  app.py  personality.py  recording_orb.py  screens.py  sidebar.py  theme.py
tests/: test_app_controller.py  test_audio_capture.py  test_constants.py  test_transcriber.py  test_window_manager.py
web/: package-lock.json  package.json  tsconfig.app.json  vite.config.ts
web/src/: App.tsx  index.css
web/src/components/: ChatBubble.tsx  Sidebar.tsx  StatusPill.tsx
web/src/components/ui/: preloader.tsx  siri-voice-orb.tsx
web/src/lib/: api.ts
web/src/views/: AboutView.tsx  GeneralView.tsx  MetricsView.tsx  OnboardingView.tsx  SettingsView.tsx
