[project]
name = "lerolero"
version = "1.0.0"
description = "LeroLero — speak and it types. 100% offline speech-to-text for Windows with multi-GPU support."
readme = "README.md"
requires-python = ">=3.13.7"
license = "MIT"
authors = [
  { name = "Nicolas Fernandes", email = "nicolasfernandes9@gmail.com" },
]
keywords = [
  "speech-to-text",
  "voice-typing",
  "offline",
  "whisper",
  "windows",
  "intel-arc",
  "nvidia",
  "amd",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
  "customtkinter>=5.2.2",
  "pywebview>=6.0",
  "huggingface_hub[hf_xet]>=0.20.0",
  "numpy>=2.4.1",
  "pillow>=12.1.1",
  "pygetwindow>=0.0.9; sys_platform == 'win32'",
  "pynput>=1.8.1",
  "pyperclip>=1.11.0",
  "pystray>=0.19.5",
  "scipy>=1.17.0",
  "sounddevice>=0.5.3",
]

[project.optional-dependencies]
# Intel Arc / Intel iGPU — no torch needed, fully OpenVINO
intel = [
  "transformers>=4.57.6",
  "onnx>=1.20.1",
  "openvino>=2026.0.0",
  "optimum>=2.1.0",
  "optimum-intel>=1.27.0",
]
# Parakeet v3 (NVIDIA NeMo) — faster alternative to Whisper, ONNX-based
parakeet = [
  "onnx-asr>=0.3.0",
  "onnxruntime>=1.17.0",
]
# NVIDIA GPUs — torch + CUDA
nvidia = [
  "transformers>=4.57.6",
  "accelerate>=1.12.0",
  "torch>=2.0.0",
  "torchaudio>=2.0.0",
]
# AMD GPUs — ONNX Runtime DirectML
amd = [
  "transformers>=4.57.6",
  "onnxruntime-directml>=1.17.0",
  "optimum>=2.1.0",
]
# All GPU backends
all = [
  "lerolero[intel,nvidia,amd]",
]

[project.urls]
issues = "https://github.com/nicolasf9/lerolero/issues"
repository = "https://github.com/nicolasf9/lerolero"

[project.gui-scripts]
lerolero = "lerolero.__main__:main"

[dependency-groups]
dev = [
  "auto-py-to-exe>=2.48.1",
  "lefthook>=1.12.4",
  "pytest>=8.4.2",
  "pytest-cov>=7.0.0",
  "ruff>=0.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.coverage.report]
fail_under = 100
omit = ["*/__main__.py"]

[tool.coverage.run]
source = ["lerolero"]

[tool.hatch.build.targets.sdist]
include = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/lerolero"]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812", "D203", "D213"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "D"]

## pytorch index only needed if installing [nvidia] extras:
## uv pip install "lerolero[nvidia]" --extra-index-url https://download.pytorch.org/whl/cu124
