[project]
name = "lerolero"
version = "1.0.0"
description = "LeroLero — speak and it types. 100% offline speech-to-text for Windows."
readme = "README.md"
requires-python = ">=3.13.7"
license = "MIT"
authors = [
  { name = "Nicolas Fernandes", email = "nicolasfernandes9@gmail.com" },
]
keywords = [
  "speech-to-text",
  "voice-typing",
  "offline",
  "parakeet",
  "windows",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python :: 3 :: Only",
]
# All deps bundled in the exe — no runtime install.
dependencies = [
  "pywebview>=6.0",
  "huggingface_hub[hf_xet]>=0.20.0",
  "numpy>=2.4.1",
  "pillow>=12.1.1",
  "pygetwindow>=0.0.9; sys_platform == 'win32'",
  "pynput>=1.8.1",
  "pyperclip>=1.11.0",
  "pystray>=0.19.5",
  "sounddevice>=0.5.3",
  # ASR engine + model loader — bundled (no runtime install).
  "onnx-asr>=0.3.0",
  "onnxruntime-openvino>=1.17.0; sys_platform != 'darwin'",
  "onnxruntime>=1.17.0; sys_platform == 'darwin'",
]

[project.urls]
issues = "https://github.com/nicolasf9/lerolero/issues"
repository = "https://github.com/nicolasf9/lerolero"

[project.gui-scripts]
lerolero = "lerolero.__main__:main"

[dependency-groups]
dev = [
  "lefthook>=1.12.4",
  "pyinstaller>=6.0",
  "pytest>=8.4.2",
  "pytest-cov>=7.1.0",
  "ruff>=0.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.coverage.report]
omit = ["*/__main__.py"]

[tool.coverage.run]
source = ["lerolero"]

[tool.hatch.build.targets.sdist]
include = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/lerolero"]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812", "D203", "D213"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "D"]
